--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ rvm:
   - 1.9.2
   - 1.9.3
   - rbx-19mode
+  - jruby-19mode
 notifications:
-  email: false
+  email:
+    - daniel.r.whalen@gmail.com
