Skip CI build for 1.9.2 and rails master
Rails 4 requires Ruby 1.9.3+
https://travis-ci.org/integrallis/stripe_event/jobs/4242951/#L76

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ gemfile:
   - gemfiles/rails3.1.gemfile
   - gemfiles/rails3.2.gemfile
   - gemfiles/rails_master.gemfile
+matrix:
+  exclude:
+    - rvm: 1.9.2
+      gemfile: rails_master.gemfile
 notifications:
   email:
     - daniel.r.whalen@gmail.com
