Fix CI config to exclude 1.9.2 and rails master
For example:
https://github.com/travis-ci/travis-core/blob/f3e95faefd0d01daa10fa83c3fe1af60351c4f7b/spec/travis/model/build/matrix_spec.rb#L158-L159

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ gemfile:
 matrix:
   exclude:
     - rvm: 1.9.2
-      gemfile: rails_master.gemfile
+      gemfile: gemfiles/rails_master.gemfile
 notifications:
   email:
     - daniel.r.whalen@gmail.com
