Test against ruby 2.0 and jruby on travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ rvm:
   - 1.9.2
   - 1.9.3
   - rbx-19mode
+  - jruby-19mode
+  - 2.0.0
 gemfile:
   - gemfiles/rails3.1.gemfile
   - gemfiles/rails3.2.gemfile
