--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ gemfile:
   - gemfiles/rails4.0.gemfile
 matrix:
   exclude:
-    - jruby-head
     - rvm: 1.9.2
       gemfile: gemfiles/rails4.0.gemfile
+    - rvm: jruby-head
 notifications:
   email:
     - daniel.r.whalen+travis-ci@gmail.com
