Use the new build env on Travis
better stronger faster

makes you dinner every night

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,27 @@
 language: ruby
+
 rvm:
   - 1.9.2
   - 1.9.3
   - 2.0.0
-  - 2.1.0
+  - 2.1
   - jruby-19mode
+
 gemfile:
   - gemfiles/rails3.1.gemfile
   - gemfiles/rails3.2.gemfile
   - gemfiles/rails4.0.gemfile
   - gemfiles/rails4.1.gemfile
+
+sudo: false
+
 matrix:
   exclude:
     - rvm: 1.9.2
       gemfile: gemfiles/rails4.0.gemfile
     - rvm: 1.9.2
       gemfile: gemfiles/rails4.1.gemfile
+
 notifications:
   email:
     - daniel.r.whalen+travis-ci@gmail.com
