Add explicit rails5.2 gemfile to build matrix
rails master is already versioned as 6.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ rvm:
 gemfile:
   - gemfiles/rails4.2.gemfile
   - gemfiles/rails5.1.gemfile
+  - gemfiles/rails5.2.gemfile
   - gemfiles/rails_master.gemfile
 
 matrix:
