travis: Add 2.7 to build matrix. Use stable ruby for rails-master
Adds Ruby 2.7 so tests are run against it. It appears Rails 5.1+ will
run on Ruby 2.7. I've also switched rails-master to use whatever the
current stable version of ruby is which should avoid having to update
the line again in the future.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ cache: bundler
 rvm:
   - 2.5
   - 2.6
+  - 2.7
 
 gemfile:
   - gemfiles/rails5.1.gemfile
@@ -21,7 +22,7 @@ matrix:
       gemfile: gemfiles/rails4.2.gemfile
     - rvm: 2.4
       gemfile: gemfiles/rails4.2.gemfile
-    - rvm: 2.6
+    - rvm: ruby
       gemfile: gemfiles/rails_master.gemfile
   allow_failures:
     - gemfile: gemfiles/rails_master.gemfile
