Add Rails 6.1 to travis build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ gemfile:
   - gemfiles/rails5.1.gemfile
   - gemfiles/rails5.2.gemfile
   - gemfiles/rails6.0.gemfile
+  - gemfiles/rails6.1.gemfile
   - gemfiles/stripe3.gemfile
   - gemfiles/stripe4.gemfile
   - gemfiles/stripe5.gemfile
