--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
           - { ruby: "2.3", gemfile: "rails3.2", bundler: "1" }
           - { ruby: "2.3", gemfile: "rails4.2", bundler: "1" }
           - { ruby: "2.4", gemfile: "rails4.2", bundler: "1" }
+          - { ruby: "2.7", gemfile: "rails7.0", bundler: "default" }
+          - { ruby: "3.0", gemfile: "rails7.0", bundler: "default" }
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
