--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ["2.7", "3.0", "3.1"]
+        ruby: ["3.0", "3.1", "3.2"]
         bundler: [default]
         gemfile:
           - rails6.0
           - rails6.1
           - rails7.0
+          - rails7.1
           - stripe5
           - stripe6
           - stripe7
