--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
           - stripe13
           - stripe14
           - stripe15
+          - stripe16
         include:
           - { ruby: "2.3", gemfile: "rails3.2", bundler: "1" }
           - { ruby: "2.5", gemfile: "rails5.1", bundler: "default" }
